research: gc-log gap analysis and draft event list